# fastapi-todolist

./: .gitignore  LICENSE.txt  README.md  dump.rdb  pyproject.toml
src/: main.py  schemas.py
src/routes/: tasks.py
